<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="@string/Email"
        android:textSize="18sp"/>

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/Password"
           android:id="@+id/etPassword"
           android:textColor="@color/black"
           android:textSize="18sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone"
        android:digits="0123456789"
        android:id="@+id/etPhone"
        android:maxLength="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        android:id="@+id/tvForgotPassword"
        android:gravity="end"
        android:textSize="15sp"
        android:textColor="@color/black"/>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rgGender"
        android:orientation="horizontal">


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbShe"
        android:text="@string/She"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbHe"
        android:text="@string/He"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbOthers"
        android:text="@string/Others"/>
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEnterOtherGender"
        android:hint="@string/Enter_Other_Gender"
        android:visibility="invisible"/>

    <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Login"
               android:id="@+id/btnLogin"/>

</LinearLayout>